[package]
name = "enum_string"
version = "0.1.0"
authors = ["Mark Asp <mark.asp@osii.com>"]
edition = "2018"

[lib]
proc-macro = true

[[bench]]
name = "convert_bench"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
unicase = "2.6.0"
syn = { version = "1.0.31", features = ["full"] }
quote = "1.0.7"
lazy_static = "1.4.0"